--- a/.github/workflows/immortalwrt.yaml
+++ b/.github/workflows/immortalwrt.yaml
@@ -34,8 +34,8 @@ env:
   # REPO means the OpenWrt repo you want to build from in this workflow. 
   # You can modify the REPO_NAME to any name you want, but remember not to let it have the same name in 
   # other workflows.
-  REPO_NAME: LEDE
-  REPO_URL: https://github.com/coolsnowwolf/lede.git
+  REPO_NAME: ImmortalWrt
+  REPO_URL: https://github.com/immortalwrt/immortalwrt.git
   REPO_BRANCH: master
   BUILD_DEPENDS:  "ack antlr3 asciidoc autoconf automake autopoint binutils bison build-essential \
                   bzip2 ccache clang cmake cpio curl device-tree-compiler ecj fastjar flex gawk gettext gcc-multilib \
