--- a/.github/workflows/immortalwrt.yaml
+++ b/.github/workflows/immortalwrt.yaml
@@ -47,13 +47,13 @@ env:
                   texinfo uglifyjs upx-ucl unzip vim wget xmlto xxd zlib1g-dev zstd"
   # CONFIG_FILE is the name of your own config files for compiling, you should upload these files into the root 
   # directory of your workflow repo.
-  CONFIG_FILE: /build/immortalwrt/.config
+  CONFIG_FILE: ./build/immortalwrt/.config
   # CUSTOM_SCRIPT_1 is the name of extra bash script you want to execute before feeds update&install.
   # CUSTOM_SCRIPT_2 is the name of extra bash script you want to execute after feeds update&install.
   # You can modify the initial settings of your firmware through these two scripts. If this is what you need,
   # please upload your scripts to the root directory of your workflow repo.
-  CUSTOM_SCRIPT_1: /build/immortalwrt/before.sh
-  CUSTOM_SCRIPT_2: /build/immortalwrt/after.sh
+  CUSTOM_SCRIPT_1: ./build/immortalwrt/before.sh
+  CUSTOM_SCRIPT_2: ./build/immortalwrt/after.sh
   # STORE_PRODUCTS determine whether to upload all compilation products to workflow artifacts.
   # Not only firmwires, all compiled packages will be here, including compiled but not solidified into firmware.
   STORE_PRODUCTS: false
