--- a/.github/workflows/immortalwrt.yaml
+++ b/.github/workflows/immortalwrt.yaml
@@ -44,7 +44,7 @@ env:
                   libncursesw5-dev libpython3-dev libreadline-dev libssl-dev libtool lld llvm lrzsz mkisofs msmtp \
                   nano ninja-build p7zip p7zip-full patch pkgconf python2.7 python3 python3-pip python3-ply \
                   python3-docutils python3-pyelftools qemu-utils re2c rsync scons squashfs-tools subversion swig \
-                  texinfo uglifyjs upx-ucl unzip vim wget xmlto xxd zlib1g-dev zstd"
+                  texinfo uglifyjs upx-ucl unzip vim wget xmlto xxd zlib1g-dev zstd jq"
   # CONFIG_FILE is the name of your own config files for compiling, you should upload these files into the root 
   # directory of your workflow repo.
   CONFIG_FILE: ./build/immortalwrt/.config
