--- a/.github/workflows/immortalwrt-main.yaml
+++ b/.github/workflows/immortalwrt-main.yaml
@@ -13,7 +13,7 @@
 #-------------------------------------------------------------------------------------------------------
 
 # Workflow name which is showed in GitHub Actions.
-name: Build immortalwrt Firmware
+name: Build immortalwrt Firmware -main
 
 on:
   workflow_dispatch:
