--- a/.github/workflows/immortalwrt-main.yaml
+++ b/.github/workflows/immortalwrt-main.yaml
@@ -120,7 +120,7 @@ jobs:
         env:
           DEBIAN_FRONTEND: noninteractive
         run: |
-          sudo rm -rf /etc/apt/sources.list.d/*
+          # sudo rm -rf /etc/apt/sources.list.d/*
           sudo -E apt-get -qq update
           sudo -E apt-get -qq install $BUILD_DEPENDS
           sudo -E apt-get -qq autoremove --purge
