--- a/.github/workflows/immortalwrt-main.yaml
+++ b/.github/workflows/immortalwrt-main.yaml
@@ -69,7 +69,7 @@ env:
 jobs:
   check:
     name: Check for source code updates
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
     outputs:
       cache-hit: ${{ steps.cache-hash.outputs.cache-hit }}
 
@@ -95,7 +95,7 @@ jobs:
 
   build:
     name: Build firmware
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
     needs: check
     permissions:
       contents: write
@@ -120,7 +120,7 @@ jobs:
         env:
           DEBIAN_FRONTEND: noninteractive
         run: |
-          # sudo rm -rf /etc/apt/sources.list.d/*
+          sudo rm -rf /etc/apt/sources.list.d/*
           sudo -E apt-get -qq update
           sudo -E apt-get -qq install $BUILD_DEPENDS
           sudo -E apt-get -qq autoremove --purge
@@ -256,7 +256,7 @@ jobs:
 
   clean:
     name: Clean up old assets
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
     permissions:
       actions: write
       contents: write
