--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -65,6 +65,7 @@ jobs:
         env:
           DEBIAN_FRONTEND: noninteractive
         run: |
+          cat /etc/apt/sources.list
           sudo rm -rf /etc/apt/sources.list.d/*
           sudo -E apt-get -qq update
           sudo -E apt-get -qq install ack antlr3 asciidoc autoconf automake autopoint binutils bison build-essential \
